Fix - jump range and timer

--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ character
     font-family: Arial;
     font-weight: 700;
     color: white;
-    width: 100px;
+    width: 120px;
     margin: 0 auto;
     top: 20px;
     right: 10px;
